WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198880
[LFC] Fix available width for shrink-to-fit (for out-of-flow non-replaced box)
https://bugs.webkit.org/show_bug.cgi?id=198880
Summary
[LFC] Fix available width for shrink-to-fit (for out-of-flow non-replaced box)
alan
Reported
2019-06-15 00:22:33 PDT
ssia
Attachments
Patch
(3.08 KB, patch)
2019-06-15 00:27 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-15 00:23:42 PDT
<
rdar://problem/51773118
>
alan
Comment 2
2019-06-15 00:27:57 PDT
Created
attachment 372180
[details]
Patch
WebKit Commit Bot
Comment 3
2019-06-15 07:09:22 PDT
Comment on
attachment 372180
[details]
Patch Clearing flags on attachment: 372180 Committed
r246460
: <
https://trac.webkit.org/changeset/246460
>
WebKit Commit Bot
Comment 4
2019-06-15 07:09:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug