[LFC] Fix available width for shrink-to-fit (for out-of-flow non-replaced box) https://bugs.webkit.org/show_bug.cgi?id=198880 <rdar://problem/51773118>

Reviewed by Antti Koivisto.

This patch fixes the cases when the available width for the out-of-flow positioned box is not the same as the containing block's (padding)width.

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::outOfFlowNonReplacedHorizontalGeometry):


Canonical link: https://commits.webkit.org/212854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246460 268f45cc-cd09-0410-ab3c-d52691b4dbfc